cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "array_intersection",
    srcs = ["array_intersection.cc"],
    hdrs = ["array_intersection.h"],
    deps = [],
)

cc_test(
    name = "array_inresection_test",
    srcs = ["array_intersection_test.cc"],
    deps = [
        ":array_intersection",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "merge_two_sorted",
    srcs = ["merge_two_sorted.cc"],
    hdrs = ["merge_two_sorted.h"],
    deps = [],
)

cc_test(
    name = "merge_two_sorted_test",
    srcs = ["merge_two_sorted_test.cc"],
    deps = [
        ":merge_two_sorted",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "calendar",
    srcs = ["calendar.cc"],
    hdrs = ["calendar.h"],
    deps = [],
)

cc_test(
    name = "calendar_test",
    srcs = ["calendar_test.cc"],
    deps = [
        ":calendar",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "interval_union",
    srcs = ["interval_union.cc"],
    hdrs = ["interval_union.h"],
    deps = ["@absl//absl/strings:str_format"],
)

cc_test(
    name = "interval_union_test",
    srcs = ["interval_union_test.cc"],
    deps = [
        ":interval_union",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "insertion_sort",
    srcs = ["insertion_sort.cc"],
    hdrs = ["insertion_sort.h"],
    deps = [],
)

cc_test(
    name = "insertion_sort_test",
    srcs = ["insertion_sort_test.cc"],
    deps = [
        ":insertion_sort",
        "@googletest//:gtest_main",
    ],
)
