cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "//linked_lists:list_node",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "stack_max",
    srcs = ["stack_max.cc"],
    hdrs = ["stack_max.h"],
    deps = ["@absl//absl/types:optional"],
)

cc_test(
    name = "stack_max_test",
    srcs = ["stack_max_test.cc"],
    deps = [
        ":stack_max",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "rpn_expression",
    srcs = ["rpn_expression.cc"],
    hdrs = ["rpn_expression.h"],
    deps = ["@absl//absl/strings"],
)

cc_test(
    name = "rpn_expression_test",
    srcs = ["rpn_expression_test.cc"],
    deps = [
        ":rpn_expression",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "well_formedness",
    srcs = ["well_formedness.cc"],
    hdrs = ["well_formedness.h"],
    deps = [
        "@absl//absl/container:flat_hash_map",
        "@absl//absl/strings",
    ],
)

cc_test(
    name = "well_formedness_test",
    srcs = ["well_formedness_test.cc"],
    deps = [
        ":well_formedness",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "circular_buffer",
    srcs = ["circular_buffer.cc"],
    hdrs = ["circular_buffer.h"],
    deps = ["@absl//absl/types:optional"],
)

cc_test(
    name = "circular_buffer_test",
    srcs = ["circular_buffer_test.cc"],
    deps = [
        ":circular_buffer",
        "@googletest//:gtest_main",
    ],
)
