load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    deps = [
        "//linked_lists:list_node",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "stack_max",
    srcs = ["stack_max.cc"],
    hdrs = ["stack_max.h"],
    deps = ["@absl//absl/types:optional"],
)

cc_test(
    name = "stack_max_test",
    srcs = ["stack_max_test.cc"],
    deps = [
        ":stack_max",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "rpn_expression",
    srcs = ["rpn_expression.cc"],
    hdrs = ["rpn_expression.h"],
    deps = ["@absl//absl/strings"],
)

cc_test(
    name = "rpn_expression_test",
    srcs = ["rpn_expression_test.cc"],
    deps = [
        ":rpn_expression",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "well_formedness",
    srcs = ["well_formedness.cc"],
    hdrs = ["well_formedness.h"],
    deps = [
        "@absl//absl/container:flat_hash_map",
        "@absl//absl/strings",
    ],
)

cc_test(
    name = "well_formedness_test",
    srcs = ["well_formedness_test.cc"],
    deps = [
        ":well_formedness",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "circular_buffer",
    srcs = ["circular_buffer.cc"],
    hdrs = ["circular_buffer.h"],
    deps = [
        "@absl//absl/synchronization",
        "@absl//absl/types:optional",
    ],
)

cc_test(
    name = "circular_buffer_test",
    srcs = ["circular_buffer_test.cc"],
    deps = [
        ":circular_buffer",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "queue_stacks",
    srcs = ["queue_stacks.cc"],
    hdrs = ["queue_stacks.h"],
    deps = ["@absl//absl/types:optional"],
)

cc_test(
    name = "queue_stacks_test",
    srcs = ["queue_stacks_test.cc"],
    deps = [
        ":queue_stacks",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "binary_tree_depth",
    srcs = ["binary_tree_depth.cc"],
    hdrs = ["binary_tree_depth.h"],
    deps = ["//binary_trees:binary_tree_node"],
)

cc_test(
    name = "binary_tree_depth_test",
    srcs = ["binary_tree_depth_test.cc"],
    deps = [
        ":binary_tree_depth",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "remove_stars",
    srcs = ["remove_stars.cc"],
    hdrs = ["remove_stars.h"],
    deps = ["@absl//absl/strings:str_format"],
)

cc_test(
    name = "remove_stars_test",
    srcs = ["remove_stars_test.cc"],
    deps = [
        ":remove_stars",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "decode_string",
    srcs = ["decode_string.cc"],
    hdrs = ["decode_string.h"],
    deps = ["@absl//absl/strings"],
)

cc_test(
    name = "decode_string_test",
    srcs = ["decode_string_test.cc"],
    deps = [
        ":decode_string",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "asteroid_collision",
    srcs = ["asteroid_collision.cc"],
    hdrs = ["asteroid_collision.h"],
    deps = [],
)

cc_test(
    name = "asteroid_collision_test",
    srcs = ["asteroid_collision_test.cc"],
    deps = [
        ":asteroid_collision",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "dota2",
    srcs = ["dota2.cc"],
    hdrs = ["dota2.h"],
    deps = ["@absl//absl/strings"],
)

cc_test(
    name = "dota2_test",
    srcs = ["dota2_test.cc"],
    deps = [
        ":dota2",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "longest_path",
    srcs = ["longest_path.cc"],
    hdrs = ["longest_path.h"],
    deps = ["@absl//absl/strings"],
)

cc_test(
    name = "longest_path_test",
    srcs = ["longest_path_test.cc"],
    deps = [
        ":longest_path",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "bounded_queue",
    hdrs = ["bounded_queue.h"],
    deps = [],
)

cc_test(
    name = "bounded_queue_test",
    srcs = ["bounded_queue_test.cc"],
    deps = [
        ":bounded_queue",
        "@googletest//:gtest_main",
    ],
)
