cc_library(
    name = "left_rotation",
    srcs = ["left_rotation.cc"],
    hdrs = ["left_rotation.h"],
    deps = [],
)

cc_test(
    name = "left_rotation_test",
    srcs = ["left_rotation_test.cc"],
    deps = [":left_rotation",
            "@googletest//:gtest_main"],
)

cc_library(
    name = "new_year_chaos",
    srcs = ["new_year_chaos.cc"],
    hdrs = ["new_year_chaos.h"],
    deps = [],
)

cc_test(
    name = "new_year_chaos_test",
    srcs = ["new_year_chaos_test.cc"],
    deps = [":new_year_chaos",
            "@googletest//:gtest_main"],
)