load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "left_rotation",
    srcs = ["left_rotation.cc"],
    hdrs = ["left_rotation.h"],
    deps = [],
)

cc_test(
    name = "left_rotation_test",
    srcs = ["left_rotation_test.cc"],
    deps = [
        ":left_rotation",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "minimum_swap",
    srcs = ["minimum_swap.cc"],
    hdrs = ["minimum_swap.h"],
    deps = [],
)

cc_test(
    name = "minimum_swap_test",
    srcs = ["minimum_swap_test.cc"],
    deps = [
        ":minimum_swap",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "new_year_chaos",
    srcs = ["new_year_chaos.cc"],
    hdrs = ["new_year_chaos.h"],
    deps = [],
)

cc_test(
    name = "new_year_chaos_test",
    srcs = ["new_year_chaos_test.cc"],
    deps = [
        ":new_year_chaos",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sparse_arrays",
    srcs = ["sparse_arrays.cc"],
    hdrs = ["sparse_arrays.h"],
    deps = [],
)

cc_test(
    name = "sparse_arrays_test",
    srcs = ["sparse_arrays_test.cc"],
    deps = [
        ":sparse_arrays",
        "@googletest//:gtest_main",
    ],
)
