cc_library(
    name = "min_diff",
    srcs = ["min_diff.cc"],
    hdrs = ["min_diff.h"],
    deps = [],
)

cc_test(
    name = "min_diff_test",
    srcs = ["min_diff_test.cc"],
    deps = [
        ":min_diff",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "luck_balance",
    srcs = ["luck_balance.cc"],
    hdrs = ["luck_balance.h"],
    deps = [],
)

cc_test(
    name = "luck_balance_test",
    srcs = ["luck_balance_test.cc"],
    deps = [
        ":luck_balance",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "toys",
    srcs = ["toys.cc"],
    hdrs = ["toys.h"],
    deps = [],
)

cc_test(
    name = "toys_test",
    srcs = ["toys_test.cc"],
    deps = [
        ":toys",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "largest_permutation",
    srcs = ["largest_permutation.cc"],
    hdrs = ["largest_permutation.h"],
    deps = [],
)

cc_test(
    name = "largest_permutation_test",
    srcs = ["largest_permutation_test.cc"],
    deps = [
        ":largest_permutation",
        "@googletest//:gtest_main",
    ],
)
