cc_library(
    name = "min_diff",
    srcs = ["min_diff.cc"],
    hdrs = ["min_diff.h"],
    deps = [],
)

cc_test(
    name = "min_diff_test",
    srcs = ["min_diff_test.cc"],
    deps = [
        ":min_diff",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "luck_balance",
    srcs = ["luck_balance.cc"],
    hdrs = ["luck_balance.h"],
    deps = [],
)

cc_test(
    name = "luck_balance_test",
    srcs = ["luck_balance_test.cc"],
    deps = [
        ":luck_balance",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "toys",
    srcs = ["toys.cc"],
    hdrs = ["toys.h"],
    deps = [],
)

cc_test(
    name = "toys_test",
    srcs = ["toys_test.cc"],
    deps = [
        ":toys",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "largest_permutation",
    srcs = ["largest_permutation.cc"],
    hdrs = ["largest_permutation.h"],
    deps = [],
)

cc_test(
    name = "largest_permutation_test",
    srcs = ["largest_permutation_test.cc"],
    deps = [
        ":largest_permutation",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "greedy_florist",
    srcs = ["greedy_florist.cc"],
    hdrs = ["greedy_florist.h"],
    deps = [],
)

cc_test(
    name = "greedy_florist_test",
    srcs = ["greedy_florist_test.cc"],
    deps = [
        ":greedy_florist",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "max_min",
    srcs = ["max_min.cc"],
    hdrs = ["max_min.h"],
    deps = [],
)

cc_test(
    name = "max_min_test",
    srcs = ["max_min_test.cc"],
    deps = [":max_min",
            "@googletest//:gtest_main"],
)
