cc_library(
    name = "ransome_note",
    srcs = ["ransome_note.cc"],
    hdrs = ["ransome_note.h"],
    deps = [],
)

cc_test(
    name = "ransome_note_test",
    srcs = ["ransome_note_test.cc"],
    deps = [
        ":ransome_note",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "two_strings",
    srcs = ["two_strings.cc"],
    hdrs = ["two_strings.h"],
    deps = [],
)

cc_test(
    name = "two_strings_test",
    srcs = ["two_strings_test.cc"],
    deps = [
        ":two_strings",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "anagramic_pairs",
    srcs = ["anagramic_pairs.cc"],
    hdrs = ["anagramic_pairs.h"],
    deps = [],
)

cc_test(
    name = "anagramic_pairs_test",
    srcs = ["anagramic_pairs_test.cc"],
    deps = [":anagramic_pairs",
            "@googletest//:gtest_main"],
)