load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "ice_cream",
    srcs = ["ice_cream.cc"],
    hdrs = ["ice_cream.h"],
    deps = [],
)

cc_test(
    name = "ice_cream_test",
    srcs = ["ice_cream_test.cc"],
    deps = [
        ":ice_cream",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "pairs",
    srcs = ["pairs.cc"],
    hdrs = ["pairs.h"],
    deps = [],
)

cc_test(
    name = "pairs_test",
    srcs = ["pairs_test.cc"],
    deps = [
        ":pairs",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "triple_sum",
    srcs = ["triple_sum.cc"],
    hdrs = ["triple_sum.h"],
    deps = [],
)

cc_test(
    name = "triple_sum_test",
    srcs = ["triple_sum_test.cc"],
    deps = [
        ":triple_sum",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "min_time",
    srcs = ["min_time.cc"],
    hdrs = ["min_time.h"],
    deps = [],
)

cc_test(
    name = "min_time_test",
    srcs = ["min_time_test.cc"],
    deps = [
        ":min_time",
        "@googletest//:gtest_main",
    ],
)
