cc_library(
    name = "bubble_sort",
    srcs = ["bubble_sort.cc"],
    hdrs = ["bubble_sort.h"],
    deps = ["@absl//absl/strings:str_format"],
)

cc_test(
    name = "bubble_sort_test",
    srcs = ["bubble_sort_test.cc"],
    deps = [
        ":bubble_sort",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "maximum_toys",
    srcs = ["maximum_toys.cc"],
    hdrs = ["maximum_toys.h"],
    deps = [],
)

cc_test(
    name = "maximum_toys_test",
    srcs = ["maximum_toys_test.cc"],
    deps = [
        ":maximum_toys",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "comparator",
    hdrs = ["comparator.h"],
    deps = [],
)

cc_test(
    name = "comparator_test",
    srcs = ["comparator_test.cc"],
    deps = [
        ":comparator",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "activity_notifications",
    srcs = ["activity_notifications.cc"],
    hdrs = ["activity_notifications.h"],
    deps = [],
)

cc_test(
    name = "activity_notifications_test",
    srcs = ["activity_notifications_test.cc"],
    deps = [
        ":activity_notifications",
        "@googletest//:gtest_main",
    ],
)
